// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SurveyPage renders a spinner if no codes is loaded 1`] = `
<DocumentFragment>
  <div
    class="MuiCircularProgress-root pageProgress MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style="width: 40px; height: 40px;"
  >
    <svg
      class="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`SurveyPage renders a spinner if no project is loaded 1`] = `
<DocumentFragment>
  <div
    class="MuiCircularProgress-root pageProgress MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style="width: 40px; height: 40px;"
  >
    <svg
      class="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`SurveyPage renders a spinner if no survey is loaded 1`] = `
<DocumentFragment>
  <div
    class="MuiCircularProgress-root pageProgress MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
    role="progressbar"
    style="width: 40px; height: 40px;"
  >
    <svg
      class="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
        cx="44"
        cy="44"
        fill="none"
        r="20.2"
        stroke-width="3.6"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`SurveyPage renders correctly with no end date 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation2"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      <div
        class="MuiBox-root MuiBox-root-107"
      >
        <nav
          class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          <ol
            class="MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-current="page"
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-breadCrumbLink-101 MuiTypography-colorPrimary"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                >
                  Projects
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator"
            >
              /
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-current="page"
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-breadCrumbLink-101 MuiTypography-colorPrimary"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                >
                  Test Project Name
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator"
            >
              /
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                survey name
              </p>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="MuiBox-root MuiBox-root-108"
      >
        <div
          class="MuiBox-root MuiBox-root-109"
        >
          <div
            class="MuiBox-root MuiBox-root-110"
          >
            <h1
              class="MuiTypography-root makeStyles-spacingRight-105 MuiTypography-h1"
            >
              survey name
            </h1>
            <div
              class="MuiChip-root makeStyles-chip-102 makeStyles-chipActive-103 MuiChip-sizeSmall"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall"
              >
                ACTIVE
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-111"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
            >
              October 10, 1998
            </h6>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-112"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-actionButton-106 MuiButton-outlinedPrimary"
            data-testid="publish-survey-button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeMedium"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7,10A2,2 0 0,1 9,12A2,2 0 0,1 7,14A2,2 0 0,1 5,12A2,2 0 0,1 7,10M17,7A5,5 0 0,1 22,12A5,5 0 0,1 17,17H7A5,5 0 0,1 2,12A5,5 0 0,1 7,7H17M7,9A3,3 0 0,0 4,12A3,3 0 0,0 7,15H17A3,3 0 0,0 20,12A3,3 0 0,0 17,9H7Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              Publish Survey
            </span>
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-actionButton-106 MuiButton-outlinedPrimary"
            data-testid="delete-survey-button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeMedium"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              Delete Survey
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXl"
  >
    <div
      class="MuiBox-root MuiBox-root-113 makeStyles-detailsAndLocationWrapper-97"
    >
      <div
        class="MuiBox-root MuiBox-root-114 makeStyles-detailsSection-98"
      >
        <div
          class="MuiPaper-root MuiBox-root MuiBox-root-115 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class="MuiBox-root MuiBox-root-117"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2"
            >
              Survey Details
            </h2>
          </div>
          <div
            class="MuiBox-root MuiBox-root-118"
          >
            <section
              class="MuiBox-root MuiBox-root-119 makeStyles-surveyDetailsSection-116"
            >
              <div
                class="MuiBox-root MuiBox-root-120"
              >
                <div
                  class="MuiToolbar-root MuiToolbar-regular"
                  style="justify-content: space-between;"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h3 MuiTypography-colorInherit"
                  >
                    General Information
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-121"
                  >
                    <button
                      aria-label="Edit General Information"
                      class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
                      data-testid="h3-button-toolbar-Edit"
                      id="h3-button-toolbar-Edit"
                      tabindex="0"
                      title="Edit General Information"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium"
                        >
                          <svg
                            role="presentation"
                            style="width: 1.3125rem; height: 1.3125rem;"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                              style="fill: currentColor;"
                            />
                          </svg>
                        </span>
                        Edit
                      </span>
                    </button>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root"
                />
                <dl>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Survey Name
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        survey name
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Survey Timeline
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        <span>
                          Start Date:
                        </span>
                         October 10, 1998
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Survey Lead
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        first last
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Focal Species
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        focal species 1
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Anciliary Species
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        ancillary species 1
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Survey Methodology
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        method
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Permit
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        123 - Scientific
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Funding Sources
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Funding Agency Blah | $100 | April 09, 2000 - May 10, 2000
                      </dd>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <div
                        class="MuiBox-root MuiBox-root-122"
                      >
                        <div
                          class="MuiBox-root MuiBox-root-123"
                        >
                          <dt
                            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                          >
                            Purpose
                          </dt>
                        </div>
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          survey purpose
                        </p>
                      </div>
                    </div>
                  </div>
                </dl>
              </div>
              <div
                class="MuiBox-root MuiBox-root-124"
              >
                <div
                  class="MuiToolbar-root MuiToolbar-regular"
                  style="justify-content: space-between;"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h3 MuiTypography-colorInherit"
                  >
                    Proprietary Data
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-125"
                  >
                    <button
                      aria-label="Edit Survey Proprietor"
                      class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
                      data-testid="h3-button-toolbar-Edit"
                      id="h3-button-toolbar-Edit"
                      tabindex="0"
                      title="Edit Survey Proprietor"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium"
                        >
                          <svg
                            role="presentation"
                            style="width: 1.3125rem; height: 1.3125rem;"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                              style="fill: currentColor;"
                            />
                          </svg>
                        </span>
                        Edit
                      </span>
                    </button>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root"
                />
                <dl>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Proprietary Data Category
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        proprietor type
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Proprietor Name
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        prop name
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Data and Information Sharing Agreement Required
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Yes
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <div
                        class="MuiBox-root MuiBox-root-126"
                      >
                        <div
                          class="MuiBox-root MuiBox-root-127"
                        >
                          <dt
                            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                          >
                            Category Rationale
                          </dt>
                        </div>
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                          style="word-break: break-all;"
                        >
                          rationale
                        </p>
                      </div>
                    </div>
                  </div>
                </dl>
              </div>
            </section>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-128 makeStyles-locationSection-99"
      >
        <div
          class="MuiPaper-root MuiBox-root MuiBox-root-129 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class="MuiBox-root MuiBox-root-130"
          >
            <div
              class="MuiBox-root MuiBox-root-131"
            >
              <h3
                class="MuiTypography-root MuiTypography-h3"
              >
                Study Area
              </h3>
              <button
                aria-label="Edit Study Area"
                class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
                tabindex="0"
                title="Edit Study Area"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      role="presentation"
                      style="width: 1.3125rem; height: 1.3125rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  Edit
                </span>
              </button>
            </div>
            <dl>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <dt
                    class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                  >
                    Survey Area Name
                  </dt>
                  <dd
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    study area
                  </dd>
                </div>
              </div>
            </dl>
            <div
              class="MuiBox-root MuiBox-root-132"
            >
              <div
                id="survey_study_area_map"
                style="height: 100%;"
              />
            </div>
            <button
              aria-label="Show Expanded Location"
              class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
              tabindex="0"
              title="Expand Location"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Show More
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    role="presentation"
                    style="width: 1.3125rem; height: 1.3125rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-133"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
          style="justify-content: space-between;"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 MuiTypography-colorInherit"
          >
            Documents
          </h2>
          <div
            class="MuiBox-root MuiBox-root-136"
          >
            <button
              aria-controls="basic-menu"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    role="presentation"
                    style="width: 1.5rem; height: 1.5rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
                Upload
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    role="presentation"
                    style="width: 1.5rem; height: 1.5rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7,10L12,15L17,10H7Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-141"
        >
          <div
            class="MuiTableContainer-root"
          >
            <table
              aria-label="attachments-list-table"
              class="MuiTable-root makeStyles-attachmentsTable-137"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    Last Modified
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    File Size
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                    width="150px"
                  >
                    Security Status
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                    width="50px"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
                    colspan="5"
                  >
                    No Attachments
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SurveyPage renders survey page when survey is loaded 1`] = `
<DocumentFragment>
  <div
    class="MuiPaper-root MuiPaper-elevation2"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthXl"
    >
      <div
        class="MuiBox-root MuiBox-root-62"
      >
        <nav
          class="MuiTypography-root MuiBreadcrumbs-root MuiTypography-body1 MuiTypography-colorTextSecondary"
        >
          <ol
            class="MuiBreadcrumbs-ol"
          >
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-current="page"
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-breadCrumbLink-56 MuiTypography-colorPrimary"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                >
                  Projects
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator"
            >
              /
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <a
                aria-current="page"
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-breadCrumbLink-56 MuiTypography-colorPrimary"
              >
                <p
                  class="MuiTypography-root MuiTypography-body2"
                >
                  Test Project Name
                </p>
              </a>
            </li>
            <li
              aria-hidden="true"
              class="MuiBreadcrumbs-separator"
            >
              /
            </li>
            <li
              class="MuiBreadcrumbs-li"
            >
              <p
                class="MuiTypography-root MuiTypography-body2"
              >
                survey name
              </p>
            </li>
          </ol>
        </nav>
      </div>
      <div
        class="MuiBox-root MuiBox-root-63"
      >
        <div
          class="MuiBox-root MuiBox-root-64"
        >
          <div
            class="MuiBox-root MuiBox-root-65"
          >
            <h1
              class="MuiTypography-root makeStyles-spacingRight-60 MuiTypography-h1"
            >
              survey name
            </h1>
            <div
              class="MuiChip-root makeStyles-chip-57 makeStyles-chipActive-58 MuiChip-sizeSmall"
            >
              <span
                class="MuiChip-label MuiChip-labelSmall"
              >
                ACTIVE
              </span>
            </div>
          </div>
          <div
            class="MuiBox-root MuiBox-root-66"
          >
            <h6
              class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
            >
              October 10, 1998 - February 26, 2021
            </h6>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-67"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-actionButton-61 MuiButton-outlinedPrimary"
            data-testid="publish-survey-button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeMedium"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7,10A2,2 0 0,1 9,12A2,2 0 0,1 7,14A2,2 0 0,1 5,12A2,2 0 0,1 7,10M17,7A5,5 0 0,1 22,12A5,5 0 0,1 17,17H7A5,5 0 0,1 2,12A5,5 0 0,1 7,7H17M7,9A3,3 0 0,0 4,12A3,3 0 0,0 7,15H17A3,3 0 0,0 20,12A3,3 0 0,0 17,9H7Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              Publish Survey
            </span>
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-actionButton-61 MuiButton-outlinedPrimary"
            data-testid="delete-survey-button"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="MuiButton-startIcon MuiButton-iconSizeMedium"
              >
                <svg
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M9,3V4H4V6H5V19A2,2 0 0,0 7,21H17A2,2 0 0,0 19,19V6H20V4H15V3H9M7,6H17V19H7V6M9,8V17H11V8H9M13,8V17H15V8H13Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              Delete Survey
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthXl"
  >
    <div
      class="MuiBox-root MuiBox-root-68 makeStyles-detailsAndLocationWrapper-52"
    >
      <div
        class="MuiBox-root MuiBox-root-69 makeStyles-detailsSection-53"
      >
        <div
          class="MuiPaper-root MuiBox-root MuiBox-root-70 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class="MuiBox-root MuiBox-root-72"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2"
            >
              Survey Details
            </h2>
          </div>
          <div
            class="MuiBox-root MuiBox-root-73"
          >
            <section
              class="MuiBox-root MuiBox-root-74 makeStyles-surveyDetailsSection-71"
            >
              <div
                class="MuiBox-root MuiBox-root-75"
              >
                <div
                  class="MuiToolbar-root MuiToolbar-regular"
                  style="justify-content: space-between;"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h3 MuiTypography-colorInherit"
                  >
                    General Information
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-76"
                  >
                    <button
                      aria-label="Edit General Information"
                      class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
                      data-testid="h3-button-toolbar-Edit"
                      id="h3-button-toolbar-Edit"
                      tabindex="0"
                      title="Edit General Information"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium"
                        >
                          <svg
                            role="presentation"
                            style="width: 1.3125rem; height: 1.3125rem;"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                              style="fill: currentColor;"
                            />
                          </svg>
                        </span>
                        Edit
                      </span>
                    </button>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root"
                />
                <dl>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Survey Name
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        survey name
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Survey Timeline
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        October 10, 1998 - February 26, 2021
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Survey Lead
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        first last
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Focal Species
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        focal species 1
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Anciliary Species
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        ancillary species 1
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Survey Methodology
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        method
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Permit
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        123 - Scientific
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Funding Sources
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Funding Agency Blah | $100 | April 09, 2000 - May 10, 2000
                      </dd>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <div
                        class="MuiBox-root MuiBox-root-77"
                      >
                        <div
                          class="MuiBox-root MuiBox-root-78"
                        >
                          <dt
                            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                          >
                            Purpose
                          </dt>
                        </div>
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                        >
                          survey purpose
                        </p>
                      </div>
                    </div>
                  </div>
                </dl>
              </div>
              <div
                class="MuiBox-root MuiBox-root-79"
              >
                <div
                  class="MuiToolbar-root MuiToolbar-regular"
                  style="justify-content: space-between;"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h3 MuiTypography-colorInherit"
                  >
                    Proprietary Data
                  </h3>
                  <div
                    class="MuiBox-root MuiBox-root-80"
                  >
                    <button
                      aria-label="Edit Survey Proprietor"
                      class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
                      data-testid="h3-button-toolbar-Edit"
                      id="h3-button-toolbar-Edit"
                      tabindex="0"
                      title="Edit Survey Proprietor"
                      type="button"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        <span
                          class="MuiButton-startIcon MuiButton-iconSizeMedium"
                        >
                          <svg
                            role="presentation"
                            style="width: 1.3125rem; height: 1.3125rem;"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                              style="fill: currentColor;"
                            />
                          </svg>
                        </span>
                        Edit
                      </span>
                    </button>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root"
                />
                <dl>
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Proprietary Data Category
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        proprietor type
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Proprietor Name
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        prop name
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-4"
                    >
                      <dt
                        class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                      >
                        Data and Information Sharing Agreement Required
                      </dt>
                      <dd
                        class="MuiTypography-root MuiTypography-body1"
                      >
                        Yes
                      </dd>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-item"
                    >
                      <div
                        class="MuiBox-root MuiBox-root-81"
                      >
                        <div
                          class="MuiBox-root MuiBox-root-82"
                        >
                          <dt
                            class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                          >
                            Category Rationale
                          </dt>
                        </div>
                        <p
                          class="MuiTypography-root MuiTypography-body1"
                          style="word-break: break-all;"
                        >
                          rationale
                        </p>
                      </div>
                    </div>
                  </div>
                </dl>
              </div>
            </section>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-83 makeStyles-locationSection-54"
      >
        <div
          class="MuiPaper-root MuiBox-root MuiBox-root-84 MuiPaper-elevation1 MuiPaper-rounded"
        >
          <div
            class="MuiBox-root MuiBox-root-85"
          >
            <div
              class="MuiBox-root MuiBox-root-86"
            >
              <h3
                class="MuiTypography-root MuiTypography-h3"
              >
                Study Area
              </h3>
              <button
                aria-label="Edit Study Area"
                class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
                tabindex="0"
                title="Edit Study Area"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium"
                  >
                    <svg
                      role="presentation"
                      style="width: 1.3125rem; height: 1.3125rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  Edit
                </span>
              </button>
            </div>
            <dl>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
                >
                  <dt
                    class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
                  >
                    Survey Area Name
                  </dt>
                  <dd
                    class="MuiTypography-root MuiTypography-body1"
                  >
                    study area
                  </dd>
                </div>
              </div>
            </dl>
            <div
              class="MuiBox-root MuiBox-root-87"
            >
              <div
                id="survey_study_area_map"
                style="height: 100%;"
              />
            </div>
            <button
              aria-label="Show Expanded Location"
              class="MuiButtonBase-root MuiButton-root MuiButton-text sectionHeaderButton MuiButton-textPrimary"
              tabindex="0"
              title="Expand Location"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Show More
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    role="presentation"
                    style="width: 1.3125rem; height: 1.3125rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-88"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
          style="justify-content: space-between;"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 MuiTypography-colorInherit"
          >
            Documents
          </h2>
          <div
            class="MuiBox-root MuiBox-root-91"
          >
            <button
              aria-controls="basic-menu"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <span
                  class="MuiButton-startIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    role="presentation"
                    style="width: 1.5rem; height: 1.5rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
                Upload
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    role="presentation"
                    style="width: 1.5rem; height: 1.5rem;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M7,10L12,15L17,10H7Z"
                      style="fill: currentColor;"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="MuiBox-root MuiBox-root-96"
        >
          <div
            class="MuiTableContainer-root"
          >
            <table
              aria-label="attachments-list-table"
              class="MuiTable-root makeStyles-attachmentsTable-92"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    Last Modified
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                  >
                    File Size
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                    width="150px"
                  >
                    Security Status
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    scope="col"
                    width="50px"
                  />
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter"
                    colspan="5"
                  >
                    No Attachments
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
